Grammar corrections to the conclusions...

--- a/Summary.tex
+++ b/Summary.tex
@@ -33,7 +33,7 @@ The \gls{mobelm} forces the dark pixel to look like the Ecolight run, which migh
 
 % ------------------------------
 \subsection{Spectral-Matching and LUT retrieval}
-The NASA's standard empirical algorithms (\S\ref{subsec:chlempirical}) for the retrieval of chlorophyll-{\it a} based on band ratios were developed mainly for Case 1 waters, where the main driver is chlorophyll-{\it a}. The {\it in situ} data used to develop these algorithms does not appear to contain enough data for high concentration of \gls{cpas} (chlorophyll-{\it a}, minerals (or total suspended matter or TSS), and colored dissolved organic matter (CDOM)), and therefore these data are not fully representative of Case 2 waters. This research demonstrated the limitations of these algorithms over cases not represented in the dataset used to develop them. As a solution to this problem, the developed retrieval algorithm was designed for the simultaneous retrieval of color producing agents (CPAs) based on spectral matching and a look-up table (LUT) created in Ecolight using OLI data. This approach does not depend on a global {\it in situ} dataset. Instead it builds a LUT specific to the inherent optical properties (IOPs) and observation conditions for the site. An advantage of this retrieval algorithm is that it retrieves simultaneously all three CPAs. On the other hand, some knowledge of the IOPs expected in the waters under study is required.
+The NASA's standard empirical algorithms (\S\ref{subsec:chlempirical}) for the retrieval of chlorophyll-{\it a} based on band ratios were developed mainly for Case 1 waters, where the main driver is chlorophyll-{\it a}. The {\it in situ} data used to develop these algorithms does not appear to contain enough data for high concentration of \gls{cpas} (chlorophyll-{\it a}, minerals (or total suspended matter or TSS), and colored dissolved organic matter (CDOM)), and therefore, these data are not fully representative of Case 2 waters. This research demonstrated the limitations of these algorithms over cases not represented in the dataset used to develop them. As a solution to this problem, the developed retrieval algorithm was designed for the simultaneous retrieval of color producing agents (CPAs) based on spectral matching and a look-up table (LUT) created in Ecolight using OLI data. This approach does not depend on a global {\it in situ} dataset. Instead, it builds a LUT specific to the inherent optical properties (IOPs) and observation conditions for the site. An advantage of this retrieval algorithm is that it retrieves simultaneously all three CPAs. On the other hand, some knowledge of the IOPs expected in the waters under study is required.
 
 % copied from RS of Env. paper
 The developed retrieval process was applied to three Landsat 8 scenes over the same study area and compared with field measurements. Maps of CPA concentrations show the expected trends of low concentration in the lake and higher concentration in the ponds.  
@@ -48,9 +48,9 @@ The next step was to compare the developed retrieval algorithm with the standard
 
 % Limitations
 
-One of the limitation of the developed retrieval algorithm is that the \gls{mobelm} needs some knowledge of the water body (e.g. \gls{iops} and concentration of constituents at at least one point), which is often available but not always, and therefore, it will not work in every case because of the need for this knowledge. However, it is still a good answer for many cases where this knowledge is indeed available. The goal of future work is an approach with good atmospheric correction without the need for ground-truth. For example, IOPs are often stable and could be estimated from previous studies (perhaps seasonally in some water bodies) and CPAs of a local open water region may be predicted based on historical data if no concurrent data are available.
+One of the limitations of the developed retrieval algorithm is that the \gls{mobelm} needs some knowledge of the water body (e.g. \gls{iops} and concentration of constituents at at least one point), which is often available but not always, and therefore, it will not work in every case because of the need for this knowledge. However, it is still a good answer for many cases where this knowledge is indeed available. The goal of future work is an approach with good atmospheric correction without the need for ground-truth. For example, IOPs are often stable and could be estimated from previous studies (perhaps seasonally in some water bodies) and CPAs of a local open water region may be predicted based on historical data if no concurrent data are available.
 
-Some pixels from the lake shoreline include signal from the bottom causing outliers in the retrieval results since the bottom reflectance was not accounted for in the process. The next version of this retrieval algorithm should address this issue. This could be done by adding the bottom reflectance as an extra variable in the process, and as an extra input to the LUT in Hydrolight. 
+Some pixels from the lake shoreline include some signal from the bottom causing outliers in the retrieval results since the bottom reflectance was not accounted for in the process. The next version of this retrieval algorithm should address this issue. This could be done by adding the bottom reflectance as an extra variable in the process, and as an extra input to the LUT in Hydrolight. 
 
 One approach that was not tested in the research is using the results from the traditional \gls{elm}  or MoB-ELM \todo{MoB-ELM only?} algorithms as input to the standard NASA models and to investigate whether the retrieval improves or not. On the other hand, the results from the \citet{Gordon:1994} algorithm could be used as input to the developed LUT-based inversion method and investigate if the results improve or not\todo{Do it!}.
 % -------------------------------------
@@ -80,7 +80,7 @@ This research utilized different softwares and programming languages (i.e. Matla
 \subsection{In depth IOPs and AOPs analysis}
 A global application could be possible if the field-based library (LUT) is comprehensive enough. To accomplish this, a wider range of water bodies have to be included in the dataset. However, a more in depth analysis of how stable the IOPs of a certain region are over time is needed. 
 
-Also, more accurate information about scattering properties should be input to Hydrolight in order to create the LUTs. An IOP-AOP inversion algorithm (semianalitic algorithm) could be utilized for this purpose since the only unknown is the \gls{b_boverb}, as described in \S\ref{subsec:semianalitic}.
+Also, more accurate information about scattering properties should be input to Hydrolight in order to create the LUTs. An IOP-AOP inversion algorithm (semi-analytic algorithm) could be utilized for this purpose since the only unknown is the \gls{b_boverb}, as described in \S\ref{subsec:semianalitic}.
 
 % -------------------------------------
 \section{Concluding Remarks}
@@ -89,8 +89,8 @@ The retrieval results demonstrated that for Case 2 waters, the solution for the 
 One approach that was not considered in this study is to apply different atmospheric algorithms based on the water type (Case 1 or Case 2). For example, to apply the NASA's standard algorithms to the lake (Case 1), and to apply the developed retrieval algorithm to the ponds (Case 2). An index could be created to differentiate between them.
 
 % Limitations
-One of the limitation of using Landsat 8 is its temporal resolution of 16 days, which does not allow for daily monitoring. Also, because of this temporal resolution, the chance to get an image with clear weather conditions in the area of study is limited.
+One of the limitations of using Landsat 8 is its temporal resolution of 16 days, which does not allow for daily monitoring. Also, because of this temporal resolution, the chance to get an image with clear weather conditions in the area of study is limited.
 
-To date, there are no other sources of free access, open to the international science community, satellite imagery with similar spatial resolution or similar standard product (e.g. MODIS chl-{\it a} product) to compare with. Therefore, a direct comparison of results from our approach with typical algorithms over water bodies smaller than one kilometer is not possible. This is a challenge that needs to be addressed since there is a particular interest from local communities for monitoring water bodies that are not resolvable by current ocean color satellites. This is the case of the ponds included in this study, which are less than one kilometer in size. This fact makes Landsat 8 a pioneer in the retrieval of water quality parameters over medium to small water bodies. This also opens a need for more field measurement collection (i.e. IOPs, $R_{rs}$ and concentrations) on a regular basis where water quality needs to be assessed for the validation of products derived from moderate spatial resolution sensors such a Landsat 8 and the upcoming Sentinel 2. 
+To date, there are no other sources of free access, open to the international science community, satellite imagery with similar spatial resolution or similar standard product (e.g. MODIS chl-{\it a} product) to compare with. Therefore, a direct comparison of results from our approach with typical algorithms over water bodies smaller than one kilometer is not possible. This is a challenge that needs to be addressed since there is a particular interest from local communities for monitoring water bodies that are not resolvable by current ocean color satellites. This is the case of the ponds included in this study, which are less than one kilometer in size. This fact makes Landsat 8 a pioneer in the retrieval of water quality parameters over medium to small water bodies. This also opens a need for more field measurement collection (i.e. IOPs, $R_{rs}$, and concentrations) on a regular basis where water quality needs to be assessed for the validation of products derived from moderate spatial resolution sensors such a Landsat 8 and the upcoming Sentinel 2. 
 
 Finally, this work demonstrated the feasibility of using Landsat-like sensors for the monitoring of coastal and inland water, preparing the way for future missions, such a Landsat 9, Landsat 10, and Sentinel 2. The future of ocean color is in the coastal zones using high spatial resolution, and Landsat 8 is a major step forward toward this goal.
