Last Version to be printed...

--- a/Background_and_Theory.tex
+++ b/Background_and_Theory.tex
@@ -144,7 +144,7 @@ Each contribution previously described could be relevant by itself, depending of
 
 \begin{figure}[htb]
   \centering
-  \includegraphics[height=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/WaterRadianceFixed.png}
+  \includegraphics[trim=5 0 0 0,clip,height=8cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/Proposal/Images/WaterRadianceFixed.png}
 \caption{Contribution to the sensor reaching radiance $L_s$ above the water surface. Thick arrows represent single-scattering contributions; thin arrows represent multiple scattering contributions (Source: \protect\url{http://www.oceanopticsbook.info/}).}
 \label{fig:watercontribution} 
 \end{figure}
