--- a/Results.tex
+++ b/Results.tex
@@ -884,7 +884,7 @@ The results of the retrieval for the 09-19-2013 scene are illustrated in \autore
       \end{overpic}   
   \end{minipage}
 % 
-  \caption[CPA retrieval results for the Landsat 8 image acquired on 09-19-2013]{CPA retrieval results for the Landsat 8 image acquired on 09-19-2013 (scene LC80160302013262LGN00) over the Rochester Embayment for (a) chlorophyll, (b) sediments and (c) CDOM.\label{fig:CPAsMaps130919}}
+  \caption[CPA concentration maps in log scale for the Landsat 8 image acquired on 09-19-2013]{CPA concentration maps in log scale for the Landsat 8 image acquired on 09-19-2013 (scene LC80160302013262LGN00) over the Rochester Embayment for (a) chlorophyll, (b) sediments and (c) CDOM.\label{fig:CPAsMaps130919}}
 \end{figure}
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 \begin{figure}[htbp!]
@@ -922,7 +922,7 @@ The results of the retrieval for the 09-19-2013 scene are illustrated in \autore
       % \includegraphics[height=5.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/CDOMretvsmea140929_150420}
   % \end{minipage}
 
-  \caption[CPA concentration maps for Landsat 8 image acquired on 09-29-2014]{CPA concentration maps for Landsat 8 image acquired on 09-29-2014 (scene LC80170302014272LGN00) over the Rochester Embayment for (a) chlorophyll, (b) sediments and (c) CDOM.\label{fig:CPAsMaps140929} } 
+  \caption[CPA concentration maps in log scale for the Landsat 8 image acquired on 09-29-2014]{CPA concentration maps in log scale for the Landsat 8 image acquired on 09-29-2014 (scene LC80170302014272LGN00) over the Rochester Embayment for (a) chlorophyll, (b) sediments and (c) CDOM.\label{fig:CPAsMaps140929} } 
 \end{figure}
 
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
@@ -948,7 +948,7 @@ The results of the retrieval for the 09-19-2013 scene are illustrated in \autore
       \end{overpic}   
   \end{minipage}
 % 
-  \caption[CPA retrieval results for the Landsat 8 image acquired on 09-16-2015]{CPA retrieval results for the Landsat 8 image acquired on 09-16-2015 (scene LC80170302015259LGN00) over the Rochester Embayment for (a) chlorophyll, (b) sediments and (c) CDOM.\label{fig:CPAsMaps150916}}
+  \caption[CPA concentration maps in log scale for the Landsat 8 image acquired on 09-16-2015]{CPA concentration maps in log scale for the Landsat 8 image acquired on 09-16-2015 (scene LC80170302015259LGN00) over the Rochester Embayment for (a) chlorophyll, (b) sediments and (c) CDOM.\label{fig:CPAsMaps150916}}
 \end{figure}
 
 % %%%%%%%%%%%%%%%%%%% SECTION %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
