Added Dr Kerekes name to the front page...

--- a/thesisfrontmatter.sty
+++ b/thesisfrontmatter.sty
@@ -222,7 +222,7 @@
         \fontsize{12}{8}\selectfont
         ~Signature of the Author \hrulefill \\
         \mbox{ \rule{0cm}{1.5cm}Accepted by } \hrulefill \\
-        \mbox{ \hspace{2.5cm} } Coordinator, \letters ~Degree Program \hspace{5cm} Date
+        \mbox{ \hspace{2.5cm} } Dr. John Kerekes, Coordinator, \letters ~Degree Program \hfill Date
     \end{flushleft}
 }
 
