Last Version to be printed...

--- a/Thesis_PhD.tex
+++ b/Thesis_PhD.tex
@@ -321,7 +321,7 @@
 % Background/motivation/context
 The most interaction between humankind and water occurs in coastal and inland waters (Case 2 waters) at a scale of tens or hundred of meters, but there is not yet an ocean color product (e.g. chlorophyll-{\it a} product) at this spatial scale.
 %
-Landsat 8 could potentially addresses the remote sensing of these kinds of waters due to its improved features. 
+Landsat 8 could potentially address the remote sensing of these kinds of waters due to its improved features. 
 % Aim/objectives(s)/problem statement
 This work presents an approach to obtain the color producing agents (CPAs) chlorophyll-{\it a}, colored dissolved organic material (CDOM) and suspended material (SM) from water bodies using Landsat 8.
 %
